[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ops-support-triage"
version = "1.0.0"
description = "Operations support triage OpenEnv environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hackathon Builder", email = "builder@example.com"}
]
dependencies = [
  "fastapi>=0.135,<0.136",
  "uvicorn[standard]>=0.35,<0.43",
  "pydantic>=1.10.13,<3.0",
  "openai>=1.14.3",
  "openenv-core>=0.2.2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx"
]

[project.scripts]
server = "server.app:main"
ops-support-triage = "support_triage_env.server:run_server"

[tool.setuptools.packages.find]
where = ["."]
